--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,24 +18,24 @@
   url = "#projects"
   weight = 30
 
-[[main]]
-  name = "Talks"
-  url = "#talks"
-  weight = 40
+#[[main]]
+#  name = "Talks"
+#  url = "#talks"
+ # weight = 40
 
 [[main]]
   name = "Publications"
   url = "#featured"
-  weight = 50
+  weight = 40
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "media/resume.pdf"
-#    weight = 70
+ [[main]]
+    name = "CV"
+    url = "media/resume.pdf"
+    weight = 60
