--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -37,5 +37,5 @@
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
  [[main]]
     name = "CV"
-    url = "media/resume.pdf"
+    url = "content/resume.pdf"
     weight = 60
