--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -97,7 +97,7 @@ address = {street = "15 Fat Kwong ", city = "Hong Kong", region = "Kowloon", pos
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "22.304182838691137", longitude = "114.17976328348163"}, 
+coordinates = {latitude = "22.304182838691137", longitude = "114.17976328348163"}
 
 # Directions for visitors to locate you.
 #directions = ""
